--- a/css/styles.css
+++ b/css/styles.css
@@ -18,11 +18,48 @@
     --order-service-button-color: #4D5AE5;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+}
+
+ul {
+    padding-left: 0;
+    margin: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
 body {
     font-family: Roboto, sans-serif;
     color: var(--primary-text-color);
 
 }
+
+.container {
+    display: block;
+    width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    /* outline: 2px solid tomato; */
+    margin: 0 auto;
+    align-items: center;
+}
+
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
 /* Логотип */
 .logo {
     font-family: Raleway, sans-serif;
@@ -64,6 +101,31 @@ body {
     color: var(--header-hover-color)
 }
 
+.header-box {
+    box-sizing: border-box;
+    background: #FFFFFF;
+    border-bottom: 1px solid #E7E9FC;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+.nav-box {
+    display: flex;
+    align-items: center;
+}
+
+.nav-box-list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px;
+    gap: 40px;
+    margin-left: 76px;
+}
+
+
 /* Контакти */
 
 .address {
@@ -84,10 +146,32 @@ body {
     color: var(--header-hover-color)
 }
 
+.address-box {
+    display: flex;
+}
+
+.address-box-list {
+    display: flex;
+    gap: 40px;
+}
+
 /* Hero section */
 
 .hero-section {
     background-color: var(--first-bg-color);
+    
+}
+
+.hero-container {
+    padding-top: 188px;
+    padding-bottom: 188px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.hero-heading-box {
+    max-width: 496px;
+    margin: 0 auto;
 }
 
 .hero-heading {
@@ -107,14 +191,52 @@ body {
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
-    display: flex;
-    align-items: center;
     letter-spacing: 0.04em;
     background-color: var(--order-service-button-color);
     cursor: pointer;
 }
 
+.hero-button-box {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 16px 32px;
+    gap: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    margin: 48px auto;
+}
+
 /* Features */
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.features-box {
+    display: flex;
+    background-color: #fff;
+}
+
+.features-list-box {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+
+}
+
+.features-list-item {
+    flex-basis: calc((100% - 72px) / 4);
+}
 
 .features-list-item-heading {
     color: var(--first-text-color);
@@ -136,6 +258,16 @@ body {
 
 /* Що ми робимо */
 
+.products-box {
+    padding-top: 0;
+}
+
+.products-list-box {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
 .products-heading {
     color: var(--first-text-color);
     font-style: normal;
@@ -145,9 +277,34 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    margin-bottom: 72px;
+    
 }
 
 /* Наша команда */
+
+.team-section {
+    background-color: #F4F4FD;
+}
+
+.team-list-box {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.team-list-item-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 0px 32px;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
+                0px 1px 1px rgba(46, 47, 66, 0.16), 
+                0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 0px 0px 4px 4px;
+}
 
 .team-heading {
     color: var(--first-text-color);
@@ -158,6 +315,7 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    margin-bottom: 72px;
 }
 
 .team-list-item-heading {
@@ -168,6 +326,8 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--first-text-color);
+    margin-top: 32px;
+    margin-bottom: 8px;
 }
 
 .team-list-item-description {
@@ -176,6 +336,7 @@ body {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
+    text-align: center;
     letter-spacing: 0.02em;
 }
 
@@ -183,6 +344,14 @@ body {
 
 .footer {
     background-color: var(--first-bg-color);
+    
+}
+
+.footer-box {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .footer-description {
@@ -192,8 +361,9 @@ body {
     font-size: 16px;
     line-height: 1.33;
     letter-spacing: 0.02em;
+    max-width: 264px;
+    margin-top: 16px;
 }
-
 
 .logo-part-footer {
     color: #f4f4fd;
@@ -201,6 +371,8 @@ body {
 
 /* Сторінка Портфоліо */
 /* Фільтр */
+
+
 
 .filter-button {
     color: var(--order-service-button-color);
@@ -217,6 +389,9 @@ body {
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     cursor: pointer;
+    flex-direction: row;
+    justify-content: center;
+    padding: 12px 24px;
 }
 
 .filter-button:hover, .filter-button:focus {
@@ -224,8 +399,30 @@ body {
     background-color: var(--header-hover-color);
 }
 
-.filter-list {
-    list-style: none;
+.buttons-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    margin-bottom: 72px;
+}
+
+.filters-box {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+}
+
+.filter-item:is(:hover, :focus) .filter-item {
+    flex-basis: calc((100% - 48px)/3);
+}
+
+.filter-item {
+    box-sizing: border-box;
+    background: #FFFFFF;
+    
+    flex-basis: calc((100% - 48px)/3);
 }
 
 .filter-item-heading {
@@ -247,8 +444,14 @@ body {
     letter-spacing: 0.02em;
 }
 
-.container {
-    width: 1158px;
-    outline:2px solid tomato;
-   
+.item-text {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding-top: 32px;
+    padding-left: 16px;
+    padding-bottom: 32px;
+    border: 1px solid #E7E9FC;
+    border-top: none; 
 }
+
