--- a/css/styles.css
+++ b/css/styles.css
@@ -101,10 +101,14 @@ body {
     color: var(--header-hover-color)
 }
 
+.border-line {
+    border-bottom: 1px solid #E7E9FC;
+}
+
 .header-box {
     box-sizing: border-box;
     background: #FFFFFF;
-    border-bottom: 1px solid #E7E9FC;
+    /* border-bottom: 1px solid #E7E9FC; */
     display: flex;
     justify-content: space-between;
     padding-top: 24px;
@@ -205,6 +209,7 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     margin: 48px auto;
+    border: none;
 }
 
 /* Features */
@@ -229,7 +234,7 @@ body {
 
 .features-list-box {
     display: flex;
-    align-items: center;
+    justify-content: center;
     gap: 24px;
 
 }
