--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ body {
     width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
-    outline: 2px solid tomato;
+    /* outline: 2px solid tomato; */
     margin: 0 auto;
     align-items: center;
 }
